feat(roomserver): add livekit proxy for internal roomserver
closes #1354
